# OpenPantheon

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  SECURITY.md  cookiecutter-config-file.yml  docker-compose.yml  license-check-and-add.json  license_header.txt  package.json  vue.config.js
backend/app/: .env  .flake8  .style.yapf  .yapfignore  alembic.ini  mypy.ini  poetry.toml  prestart.sh  pyproject.toml  tests-start.sh  worker-start.sh
backend/app/alembic/: README.md  env.py  script.py.mako
backend/app/alembic/versions/: .keep  030be1df4bec_comments_fix.py  17847892ae1a_comments_fix.py  1c887bb157b0_initial_migration.py  2271836fdf5d_back_to_start.py  31820b6d5e6c_comments_fix.py  31d7452d30c3_comments_fix.py  34a0b0847b05_comments_fix.py  37c1a06bf4b2_comments_fix.py  3c8221250fca_comments_fix.py  40adcb56bd8d_switch_items_to_persons.py  42bad993972d_debugging_time_created.py  46dba5966876_comments_fix.py  4edb8fb78b04_comments_fix.py  57d342a03232_comments.py  64f9c5bd1edf_debugging_time_created.py  6dd81729981f_add_a_few_columns_to_person.py  7094cbc74bb0_comments_fix.py  71e31dd119d3_comments_fix.py  71ee2b6e0f6d_comments_fix.py  749d2b6f5d70_comments_fix.py  76fd9dbebfd0_comments_fix.py  7d7d1cbed191_comments_fix.py  840ce790e442_comments_fix.py  8f8bba24927c_.py  90bd4117bd1b_reinit_fluff.py  97b52bb5c299_comments_fix.py  9f1fdf55725b_refractor_personality.py  a04106e7f2da_validate_all_comments.py  a4e558c7b76e_comments_fix.py  ad25823c6600_comments_fix.py  b5af69df7c8c_add_column_last_name_to_user_model.py  baa74eddc40f_refractor_personality.py  bdc3c703d0cc_add_column_time_created_to_the_.py  cbe8d48305cb_new_approval_concept.py  d4867f3a4c0a_first_revision.py  dbb336279d4c_comments_fix.py  de19eb5ca4fc_comments_fix.py  e8c0633fc1cf_comments_fix.py  e9da629dde28_comments_fix.py  (+2 more)
backend/app/app/: backend_pre_start.py  initial_data.py  main.py  security.py  send_email.py  tests_pre_start.py  utils.py  uvicorn_worker.py  worker.py
backend/app/app/api/: deps.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: __init__.py  base.py  (+3 more)
backend/app/scripts/: format.sh  lint.sh  test-cov-html.sh  test.sh
(+138 files in other folders)
