# OpenPantheon: the pantheon for Education
# Copyright (C) 2021 CRI
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published
# by the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
[tool.poetry]
name = "OpenPantheon"
version = "0.1.0"
description = "The Open Pantheon of Education"
authors = ["CRI IT team <it-team@cri-paris.org>"]
license = "AGPL-3.0-or-later"
readme = "../../README.md"
repository = "https://github.com/CyberCRI/OpenPantheon"

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.13.0"
fastapi = "^0.68.1"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.26.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = "^1.8.2"
emails = "^0.6"
gunicorn = "^20.1.0"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.9.1"
alembic = "^1.7.1"
sqlalchemy = {version = ">=1.4,<1.4.23"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-builtins = "^1.5.3"
flake8-eradicate = "^1.0.0"
flake8-pie = "^0.13.0"
flake8-pytest-style = "^1.4.2"
flake8-return = "^1.1.3"
flake8-simplify = "^0.14.1"
flake8-bandit = "^2.1.2"
flake8-length = "^0.1.0"
yapf = "^0.31.0"
isort = "^5.9.3"
mypy = "^0.910"
flake8-bugbear = "^21.4.3"
pep8-naming = "^0.11.1"
pytest = "^6.2.4"
pytest-cov = "^2.8.1"
sqlalchemy-stubs = "^0.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CyberCRI/OpenPantheon/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 120
